[package]
name = "byovpc-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.8"
aws-sdk-ec2 = "1.26.0"
aws-sdk-elasticloadbalancingv2 = "1.19.0"
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
