[package]
name = "byovpc-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
aws-config = "1.1.8"
aws-sdk-ec2 = "1.26.0"
aws-sdk-elasticloadbalancing = "1.31.0"
aws-sdk-elasticloadbalancingv2 = "1.19.0"
aws-sdk-route53 = "1.46.0"
aws-smithy-runtime = "1.3.0"
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
derive_builder = "0.20.1"
env_logger = "0.11.3"
headers = "0.3"
hyper = "0.14"
hyper-proxy = "0.9.1"
itertools = "0.13.0"
log = "0.4.21"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
